syntax = "proto3";
package kratos.api;

option go_package = "bbbid/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string dsn = 2;
    int32 max_conns = 3;
    int32 idle_conns = 4; //空闲链接
    google.protobuf.Duration life_time = 5; //
    google.protobuf.Duration idle_time = 6; //空闲时间
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    int32 db = 4;
    int32 pool_size = 5;
    int32 min_idle = 6;
    google.protobuf.Duration dial_timeout = 7;
    google.protobuf.Duration read_timeout = 8;
    google.protobuf.Duration write_timeout = 9;

    message Cluster {
      repeated string addrs = 1;
    }
    Cluster cluster = 10;
  }
  Database database = 1;
  Redis redis = 2;
}

message Registry {
  message Consul {
    string address = 1;
    string scheme = 2;
    google.protobuf.Duration timeout = 3;
  }
  Consul consul = 1;
}